--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+Regnblue/Temp/UnityLockfile
+
+Regnblue/Temp/UnityTempFile-56ba3005542b1c1478d8fc0235feb683
